# numerand

./: LICENSE  README.md  pyproject.toml  setup.py
examples/: random_spaced_demo.py  uniform_3d_simplices.py  uniform_tetrahedron_example.py  uniform_triangle_example.py  uniform_triangles.py
numerand/: __init__.py  _random_spaced.py  _random_table.py  _select.py  _uniform_simplex.py  _uniform_triangle.py
